--- a/app/views/event/index.html.slim
+++ b/app/views/event/index.html.slim
@@ -1,4 +1,5 @@
-= @events.each do |event|
-  h2= "#{event.title} | #{event.source}"
+- @events.each do |event|
+  a(href=event.url)
+    h2= "#{event.title} | #{event.source}"
   h3= event.when
   p= event.description
