Simple text filtering

--- a/app/views/event/index.html.slim
+++ b/app/views/event/index.html.slim
@@ -6,6 +6,8 @@ h2 filter events
   = f.check_box(:date) 
   = f.date_select('date')
   div
+  =f.text_field('search', placeholder: 'search') 
+  div
   = f.submit
 
 hr
