Adds not-null constraints to events table

--- a/app/views/event/index.html.slim
+++ b/app/views/event/index.html.slim
@@ -18,5 +18,5 @@ hr
 - @events.each do |event|
   a(href=event.url)
     h2= "#{event.title} | #{event.source}"
-  h3= event.when
+  h3= event.timing
   p= event.description
